# polyregion

./: .actrc  .gitignore  .jvmopts  .scalafmt.conf  README.md  build.sbt  format.cmake  justfile  lint-ci.cmake  log.txt
ci/check_miniapps/: CMakeLists.txt  cloverleaf-gold-from-file.patch  run.sh
native/: .clang-format  .env  .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  CachedBuild.cmake  Dockerfile  ProjectConfig.cmake  README.md  build.bat  build.cmake  build.sh  build_centos7_docker_image.sh  build_llvm.cmake  build_llvm_cache.cmake  centos7-setup-llvm.sh  make_centos7_build_image.sh  make_sysroot.py  make_sysroot.sh  make_sysroot_al8.sh  setup_msvc_env.bat  sysroot.sh  toolchain_clang_aarch64.cmake  toolchain_clang_arm.cmake  toolchain_clang_i386.cmake  toolchain_clang_x86_64.cmake  toolchain_darwin_clang_arm64.cmake  toolchain_darwin_clang_x86_64.cmake  toolchain_linux_clang_arm.cmake  toolchain_linux_clang_i386.cmake  toolchain_linux_clang_x86_64.cmake  toolchain_windows_msvc_AMD64.cmake  toolchain_windows_msvc_X86.cmake  vcpkg-configuration.json  vcpkg.json
native/ast/: CMakeLists.txt  ast.cpp  ast.h
native/bindings/: CMakeLists.txt  jni_utils.h
native/clang_frontend/: CMakeLists.txt  ast_visitors.cpp  clang_utils.cpp  clang_utils.h  codegen.cpp  codegen.h  frontend.cpp  frontend.h  impl.h  outliner.cpp  outliner.h  plugin.cpp  remapper.cpp  remapper.h  rewriter.cpp  rewriter.h  test.cpp  tool.cpp
native/cmake/: deadstriparchive.cmake  linux-clang-cross-common.cmake  mergestaticlibs.cmake  polyregion_targets.cmake  polytest_discover.cmake  polytest_discover_emit.cmake  polytest_suite.cmake  prepare_amdgpu_dist.cmake  prepare_cuda_dist.cmake  sysroot_gcc_dir.cmake  testdist.cmake
native/codegen/: CMakeLists.txt  ast.cpp  dis.cpp  driver.cpp  llc.cpp  llc.h  polyregion.cpp  polyregion.h  polyregion_codegen.cpp  polyregion_codegen.h  test.cpp  utils.hpp
native/common/: CMakeLists.txt
native/compiler/: CMakeLists.txt  ast.cpp  ast.h  compiler.cpp  compiler.h  dis.h  driver.cpp  polyregion_compiler.cpp  polyregion_compiler.h  test.cpp
native/dist-check/: CMakeLists.txt  check_no_dist_dso.cmake  hello.cpp  hello.f95  offload.cpp  offload.f95  target_compile.f95
native/ewgen/: make_ew.py  requirements.txt
native/include/: concurrency_utils.hpp  dl.h  export.h  io.hpp  llvm_utils.hpp  stream.hpp  types.h  utils.hpp  variants.hpp
native/libffi/: CMakeLists.txt  fficonfig.h
native/llvm-patches/: 0002-lto-polyregion-static-plugin-hook.patch
native/llvm-patches-22.1.5/: 0001-spirv-non-static-mai-pr160956.patch  0002-flang-allow-cross-intrinsic-modules.patch  0003-spirv-legalize-ptrcast-store-scalar-to-array.patch  0004-libllvm-unique-soname.patch
native/llvm-patches-22.1.8/: 0004-libllvm-unique-soname.patch  0005-spirv-legalize-chained-ptrcast-user.patch  0006-hide-regalloc-registry.patch  0007-spirv-faceforward-null-check.patch
native/polyast/: CMakeLists.txt  ast.cpp  ast.h
native/polyc/: CMakeLists.txt  compiler.cpp  compiler.h  driver.cpp  driver_main.cpp  driver_polyc.cpp  driver_polyc.h  dso_runner.cpp  dso_runner.h  hermes_runner.cpp  js_cache.cpp  js_cache.h  js_runner.h  pass_runner.h  polyc_jit.cpp  polyc_shared_stub.cpp  polypass_locate.cpp  polypass_locate.h  polyregion_compiler.cpp  polyregion_compiler.h  qjs_runner.cpp  qjs_runner.h
native/polycpp/: CMakeLists.txt  ast_visitors.cpp  ast_visitors.h  clang_utils.cpp  clang_utils.h  codegen.cpp  codegen.h  driver_clang.cpp  driver_clang.h  driver_main.cpp  frontend.cpp  frontend.h  options.cpp  options.h  plugin.h  remapper.cpp  remapper.h  rewriter.cpp  rewriter.h  test.cpp  tool.cpp
native/polyfc/: CMakeLists.txt  driver_main.cpp  flang_driver_wrapper.cpp
native/polyfront/: CMakeLists.txt
native/polyinvoke/: CMakeLists.txt  amd_util.h  cl_platform.cpp  cuda_platform.cpp  device_lock.cpp  dl_util.h  driver.cpp  hip_platform.cpp  hsa_platform.cpp  libm.cpp  metal_platform.cpp  object_platform.cpp  polyinfo.cpp  runtime.cpp  vendor_utils.h  vulkan_platform.cpp  ze_platform.cpp
native/polyld/: CMakeLists.txt  polyld-link.cpp
native/polypass/: CMakeLists.txt  qjs_runner.cpp  qjs_runner.h
native/polyreflect/: CMakeLists.txt  interpose.cpp  interpose.h  plugin.cpp  reflect-mem.cpp  reflect-mem.h  reflect-stack.cpp  reflect-stack.h
native/polyrt/: CMakeLists.txt  cl_platform.cpp  cuda_platform.cpp  driver.cpp  ffi_wrapped.h  hip_platform.cpp  hsa_platform.cpp  libm.h  metal_platform.cpp  object_platform.cpp  runtime.cpp  vulkan_platform.cpp
native/polytest/: CMakeLists.txt  test_all.h.in
native/runtime/: CMakeLists.txt  cl_platform.cpp  cl_platform.h  cl_runtime.cpp  cl_runtime.h  cuda_platform.cpp  cuda_platform.h  cuda_runtime.cpp  cuda_runtime.h  driver.cpp  ffi_wrapped.h  hip_platform.cpp  hip_platform.h  hip_runtime.cpp  hip_runtime.h  hsa_platform.cpp  hsa_platform.h  libm.cpp  metal_cpp_impl.cpp  metal_platform.cpp  metal_platform.h  object_platform.cpp  object_platform.h  object_runtime.cpp  object_runtime.h  polyregion_runtime.cpp  polyregion_runtime.h  runtime.cpp  runtime.h  test.cpp  vulkan_platform.cpp  vulkan_platform.h
native/shared/: cxa_thread_atexit.cpp
native/src/: ast.cpp  ast.h  dis.cpp  dis.h  main.cpp  polyregion.cpp  polyregion.h  runtime.cpp  utils.hpp  variants.hpp
native/sysroot-image-creator/: README.md  package_lists_bullseye_aarch64  package_lists_bullseye_arm  package_lists_bullseye_i386  package_lists_bullseye_x86_64  sysroot-creator-bullseye.sh  sysroot-creator.sh
native/test-profiles/: default.env  emulators.darwin.env  emulators.env  emulators.linux.env  emulators.windows.env  sora-com260-a100.env  sora-framework16.env  sora-m4-mini-macos.env  sora-w11-7950x.env  soraws-uk.env
native/toolchains/: darwin-clang-amd64-asan.cmake  darwin-clang-amd64.cmake  darwin-clang-arm64-asan.cmake  darwin-clang-arm64.cmake  darwin-clang-x86_64.cmake  linux-clang-aarch64-asan.cmake  linux-clang-aarch64.cmake  linux-clang-amd64-asan.cmake  linux-clang-amd64-debug.cmake  linux-clang-amd64.cmake  linux-clang-arm.cmake  linux-clang-i386.cmake  (+8 more)
(+1043 files in other folders)
